force-app/main/default/objects/Customer_Success_Story__c/fields/Customer_Story__c.field-meta.xml
<CustomField>
    <fullName>Customer_Story__c</fullName>
    <description>Area for customer to leave desired feed back on services rendered</description>
    <label>Customer Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>