force-app/main/default/objects/Customer_Success_Story__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the product that lead to success.</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Success Stories</relationshipLabel>
    <relationshipName>Customer_Success_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>