force-app/main/default/objects/Customer_Success_Story__c/fields/Success_Rank__c.field-meta.xml
<CustomField>
    <fullName>Success_Rank__c</fullName>
    <label>Success Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>