force-app/main/default/objects/Customer_Success_Story__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Success_Rating__c</columns>
    <columns>Success_Rank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>